# py-purecrypt

./: .gitignore  LICENSE  Pipfile  README.md  build.sh  deploy.sh  pyproject.toml  setup.cfg
src/main/python/purecrypt/: __init__.py  __main__.py  b64.py  cli.py  crypt.py  crypt_md5.py  crypt_sha2.py  crypt_sha256.py  crypt_sha512.py  limits.py  method.py  salt.py
src/test/python/purecrypt/: base64_test.py  crypt_test.py  method_test.py  salt_test.py
