[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "py-purecrypt"
dynamic = ["version"]
description = "A pure Python implementation of crypt(3) from GNU libc"
requires-python = ">=3.10"
authors = [{ name = "Carl Harris" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ["cryptography"]

[project.scripts]
purecrypt = "purecrypt:cli.main"

[tool.setuptools]
packages = ["purecrypt"]
package-dir = { purecrypt = "src/main/python/purecrypt" }

[tool.setuptools.dynamic]
version = {file = "VERSION"}

