[metadata]
name = py-purecrypt
version = 0.0.0
author = Carl Harris
author_email = ceharris414@gmail.com
description = A pure Python implementation of common UNIX password encryption
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/soulwing/py-purecrypt
project_urls =
    Bug Tracker = https://gitlab.com/soulwing/py-purecrypt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src/main/python
packages = find:
python_requires = >=3.10
install_requires =
    cryptography

[options.packages.find]
where = src/main/python
