[metadata]
name = py-purecrypt
version = 0.0.2
author = Carl Harris
author_email = ceharris414@gmail.com
description = A pure Python implementation of crypt(3) from GNU libc
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soulwing/py-purecrypt
project_urls =
    Bug Tracker = https://github.com/soulwing/py-purecrypt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src/main/python
packages = find:
python_requires = >=3.10
install_requires =
    cryptography

[options.packages.find]
where = src/main/python
